# bamboogrid

./: .dockerignore  .env.example  .gitignore  Dockerfile  FUTURE_UPGRADES.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
backend/: pyproject.toml
backend/app/: auth.py  autolayout.py  commands.py  converter.py  estimation.py  jacobian.py  main.py  ppjson.py  projection.py  safe_import.py  sc.py  scenarios.py  schema.py  session.py  solve.py  storage.py  summary.py  tracing.py  ybus.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_autolayout.py  test_converter.py  test_ieee14.py  test_lines.py  test_ownership.py  test_ppjson.py  test_session_store.py  test_switches.py  test_transformers.py
deploy/helm/bamboogrid/: Chart.yaml  values.yaml
examples/: 01_extgrid_load_sgen.pp.json  02_transformer_generator.pp.json  03_substation_3w_switch.pp.json  IEEE14.pp.json  README.md  generate_examples.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  ScenarioTitle.tsx  TabStrip.tsx  api.ts  elkLayout.ts  format.ts  main.tsx  persistence.ts  power.ts  share.ts  store.ts  sync.ts  tabs.ts  theme.ts  toast.ts  trafo.ts  types.ts
frontend/src/auth/: GoogleSignIn.css  GoogleSignIn.tsx  GridsModal.tsx  SignInModal.tsx  authStore.ts
frontend/src/canvas/: BusGraphMenu.tsx  Canvas.tsx  NodeContextMenu.tsx  SearchPanel.tsx  handles.css
frontend/src/diagrams/: BusGraphWindow.tsx  PowerTriangle.tsx  Waveforms.tsx
(+70 files in other folders)
