[project]
name = "bamboogrid-backend"
version = "0.1.0"
description = "Pandapower network editor backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pandapower>=2.14",
    # Optional pandapower accelerator; without it every load flow logs a warning
    # and runs the pure-Python solver. Needs >=0.63 for Python 3.14.
    "numba>=0.63",
    "networkx>=3.0",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-http>=1.25",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "testcontainers[postgres]>=4.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
